k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rbitly
  labels:
    name: rbitly
    app: rbitly
